--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
 
     testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
 }
